<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:weightSum="1">


    <ImageView
        android:id="@+id/phone_icon"
        android:layout_width="144dp"
        android:layout_height="81dp"
        android:layout_gravity="center"
        android:layout_weight="0.50"
        android:src="@drawable/htn_logo" />

    <ProgressBar
        android:id="@+id/circularProgressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="171dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:layout_weight="0.11"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/circular"
        android:secondaryProgress="100" />


    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="9"
        android:fontFamily="sans-serif-light"
        android:inputType="textMultiLine"
        android:text="@string/complete_daily"
        android:textColor="#535c68" />


    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:fontFamily="sans-serif-light"
        android:text="@string/sleep"
        android:textColor="#535c68" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:fontFamily="sans-serif-light"
        android:text="@string/physical"
        android:textColor="#535c68" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:fontFamily="sans-serif-light"
        android:text="@string/kindness"
        android:textColor="#535c68" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:fontFamily="sans-serif-light"
        android:text="@string/positive_affirmations"
        android:textColor="#535c68" />

</LinearLayout>