<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.example.android.watmind.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="3"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_watmind_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/left_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/arrow_left"
            android:textColor="#A8A8A8"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/opening_messages"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:text="@string/placeholder"
            android:textAlignment="center"
            android:textColor="#535C68"
            android:textSize="26sp" />

        <Button
            android:id="@+id/right_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/arrow_right"
            android:textColor="#A8A8A8"
            android:textSize="24dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_buttons_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/counselling_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#99E265"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/counselling_button"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:onClick="counsellingClick"/>

        <Button
            android:id="@+id/chat_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#99E265"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/discussion_button"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:onClick="discussionClick"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#99E265"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/goals_button"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:onClick="goalsClick"/>

    </LinearLayout>

</LinearLayout>
